# stm32-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stm32h7_toolchain.cmake
include/: my_library.h
src/: my_library.c
